--- a/.github/workflows/dep.yml
+++ b/.github/workflows/dep.yml
@@ -1,65 +1,65 @@
+##
+## Licensed to the Apache Software Foundation (ASF) under one or more
+## contributor license agreements.  See the NOTICE file distributed with
+## this work for additional information regarding copyright ownership.
+## The ASF licenses this file to You under the Apache License, Version 2.0
+## (the "License"); you may not use this file except in compliance with
+## the License.  You may obtain a copy of the License at
+##
+##    http://www.apache.org/licenses/LICENSE-2.0
+##
+## Unless required by applicable law or agreed to in writing, software
+## distributed under the License is distributed on an "AS IS" BASIS,
+## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+## See the License for the specific language governing permissions and
+## limitations under the License.
+##
 #
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
+#name: Dependency
 #
-#    http://www.apache.org/licenses/LICENSE-2.0
+#on:
+#  pull_request:
+#    branches:
+#      - master
+#      - branch-*
+#    paths:
+#      # when pom or dependency workflow changes
+#      - '**/pom.xml'
+#      - '.github/workflows/dep.yml'
+#      - 'build/dependency.sh'
+#      - 'dev/dependencyList'
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+#concurrency:
+#  group: dep-${{ github.head_ref || github.run_id }}
+#  cancel-in-progress: true
 #
-
-name: Dependency
-
-on:
-  pull_request:
-    branches:
-      - master
-      - branch-*
-    paths:
-      # when pom or dependency workflow changes
-      - '**/pom.xml'
-      - '.github/workflows/dep.yml'
-      - 'build/dependency.sh'
-      - 'dev/dependencyList'
-
-concurrency:
-  group: dep-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
-
-jobs:
-  dep:
-    name: Dependency check
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-      - name: setup java
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 8
-          cache: 'maven'
-          check-latest: false
-      - name: Setup Maven
-        uses: ./.github/actions/setup-maven
-      - name: Install modules
-        env:
-          MAVEN_ARGS: -Dorg.slf4j.simpleLogger.defaultLogLevel=error
-        run: |
-          build/mvn clean install \
-            -Pflink-provided,spark-provided,hive-provided \
-            -Dmaven.javadoc.skip=true -Drat.skip=true -Dscalastyle.skip=true -Dspotless.check.skip \
-            -DskipTests \
-            -pl kyuubi-ctl,kyuubi-server,kyuubi-assembly -am
-      - name: Check dependency list
-        run: build/dependency.sh
-      - name: Dependency Review
-        uses: actions/dependency-review-action@v3
-        with:
-          fail-on-severity: moderate
+#jobs:
+#  dep:
+#    name: Dependency check
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: setup java
+#        uses: actions/setup-java@v4
+#        with:
+#          distribution: temurin
+#          java-version: 8
+#          cache: 'maven'
+#          check-latest: false
+#      - name: Setup Maven
+#        uses: ./.github/actions/setup-maven
+#      - name: Install modules
+#        env:
+#          MAVEN_ARGS: -Dorg.slf4j.simpleLogger.defaultLogLevel=error
+#        run: |
+#          build/mvn clean install \
+#            -Pflink-provided,spark-provided,hive-provided \
+#            -Dmaven.javadoc.skip=true -Drat.skip=true -Dscalastyle.skip=true -Dspotless.check.skip \
+#            -DskipTests \
+#            -pl kyuubi-ctl,kyuubi-server,kyuubi-assembly -am
+#      - name: Check dependency list
+#        run: build/dependency.sh
+#      - name: Dependency Review
+#        uses: actions/dependency-review-action@v3
+#        with:
+#          fail-on-severity: moderate
